Fix page layout on mobile
Fix links overrunning their containers and breaking page layout

--- a/_sass/_customizations.scss
+++ b/_sass/_customizations.scss
@@ -61,6 +61,7 @@ a {
     }
   }
   a {
+    word-break: break-all;
     color: $brand-red;
   }
 }
